--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -1,6 +1,6 @@
 = !OpenMalaria =
 
-Welcome to the !openmalaria wiki on google-code.
+Welcome to the !OpenMalaria wiki on google-code.
 
 !openmalaria is an open source C++ program for simulating malaria epidemiology and interventions against malaria.  It is based on microsimulations of _Plasmodium falciparum_ malaria in humans, originally developed for simulating malaria vaccines and described  
 [http://www.ajtmh.org/content/75/2_suppl here]. These models simulate the dynamics of malaria parasitaemia in the course of an infection, of transmission, of immunity, and of the processes leading to illness and death. The system is set up to simulate malaria in village, or district size human populations. The original models have been extended to include simulation of the dynamics of malaria in the mosquito vector, and by including alternative model structures for many of the components of the human models. The models allow for variations among humans in their exposure to mosquitoes, and in their responses to the parasite.
