Edited wiki page MacBuildOpenMalaria through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2315 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/MacBuildOpenMalaria.wiki
+++ b/wiki/MacBuildOpenMalaria.wiki
@@ -2,10 +2,9 @@
 
 = Dependencies =
 
-Dependencies for the mac build are  similar to those required for the [UnixBuildOpenMalaria unix build]. However, be aware that several libraries and toolkits haven't yet been ported over to Snow Leopard, and in particular, for Xcode 4.3 does not support the gcc compilers.  For that specific reason, we suggest you use Xcode 4.2.
+Dependencies for the mac build are  similar to those required for the [UnixBuildOpenMalaria unix build]. However, be aware that several libraries and toolkits haven't yet been ported over to MAC OS X 10.7 Snow Leopard, and in particular, for Xcode 4.3 does not support gcc tools.  For that specific reason, we suggest you go no higher than Xcode 4.2.
 
-For instance, you will need to build python GTK, which  is required to build the openmalariaTools front end.  If you insist, be prepared to roll up your sleeves and get a cup of coffee before diving in. Better yet,  save yourself some trouble, and run openmalaria and openmalariaTools under ubuntu on a linux virtual machine. Do send us a note to let us know how you come on.
-
+For example, you will need to build python GTK from source, which as of this writing has not yet been ported to snow leopard and is required to build the openmalariaTools front end.   If you can't be persuaded to  save yourself some trouble, and run openmalaria and openmalariaTools under ubuntu on a linux virtual machine, then be prepared to roll up your sleeve and get a cup of coffee before diving in. Let us know how you get on.
 
 = Backward compatibility =
 
@@ -13,19 +12,16 @@ To ensure backward compatibility, specify the older SDK version you'd like to us
 
 = Building =
 
-After checking out the source code, and building all the dependencies that haven't yet been ported to MAC OSX,  you have two options to build openmalaria:
+After checking out the source code, and building all the dependencies that haven't yet been ported to MAC OS X,  you have two options to build openmalaria:
 
  * Use Xcode (see below)
  * Use Makefiles (well described on the [UnixBuildOpenMalaria unix] page - in this case, recall that you must specify the use of the gcc complier and linker)
 
-= Building static binaries =
-
-Whether you use Xcode or Makefiles, for a static build, xerces must be linked with the Carbon Framework. In cmake, add the required link parameter using CMAKE_EXE_LINKER_FLAGS and adding *-framework Carbon*
 
 == Xcode ==
 
  * Run cmake-gui
- * set the source dir, and the build dir (suggested: SOURCE_DIR/build; if this doesn't exist cmake will invite  you to create it)
+ * Set the source dir, and the build dir (suggested: SOURCE_DIR/build) 
  * Run configure. Set the build system to Xcode.
  * Either disable OM_CXXTEST_ENABLE or install [http://code.google.com/p/yaml-cpp/ yaml-cpp] 
  * Configure as described in the linux/unix instructions, and generate
@@ -34,4 +30,9 @@ Whether you use Xcode or Makefiles, for a static build, xerces must be linked wi
  * Then build the rest with the ALL_BUILD target
  * Run the tests by building the RUN_TESTS target
 
- Should cmake regenerate the project for some reason, as is known to happen, you'll need to manually reload the project into Xcode. 
+Should cmake regenerate the project (as is known to happen), you'll need to manually reload the project into Xcode. 
+
+
+= Building static binaries =
+
+Whether you use Xcode or Makefiles, for a static build, xerces must be linked with the Carbon Framework. In cmake, add the required link parameter using CMAKE_EXE_LINKER_FLAGS and adding *-framework Carbon*
