--- a/wiki/SetupOverview.wiki
+++ b/wiki/SetupOverview.wiki
@@ -18,7 +18,7 @@ If you want to run your own simulations, you have the following options:
 
 = Tools =
 
-It can also be helpful to have a good text editor on hand, especially one that can edit xml files easily. 
+It can also be helpful to have a good text editor on hand, especially one that can edit XML files easily. 
 
   * [UtilsWindows Windows] — a convenient text editor, and archive tool
   * MacOSX — handles archives fine but not necessarily XML files; dashcode (presumably part of [http://developer.apple.com/tools/xcode/ xcode]) can edit XML files but struggles with scripts, or you can [http://www.google.com/search?q=macosx+text+editor search for one]
