Edited wiki page OMUsage through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2322 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/OMUsage.wiki
+++ b/wiki/OMUsage.wiki
@@ -6,6 +6,6 @@
 
 Documented here:
 
- * [SetupOverview Installing] *openmalaria* using it to run some example scenarios
- * How to [ScenarioDesign design and configure] scenarios
- * Some guidance on results might be analyzed
+ * [SetupOverview Installing] *openmalaria* and using it to run some example scenarios
+ * How to [ScenarioDesign design and configure] experimental scenarios
+ * Some guidance on how simulator results might be analyzed
