--- a/wiki/Binaries.wiki
+++ b/wiki/Binaries.wiki
@@ -1,15 +1,15 @@
 #summary Downloads: OpenMalaria and various other tools
 
-= OpenMalaria simulator =
+= openmalaria simulator =
 
 The simulator can be:
 
-  * installed and used with a graphical user interface, see [openmalariaTools  OpenMalariaTools]  
+  * installed and used with a graphical user interface, see [openmalariaTools  openmalariaTools]  
   * complied from source and run via command line, see [BuildSystem BuildSystem]
   * run over the BOINC volunteer computing network, see [http://malariacontrol.net/  malariacontrol.net ] 
  
 
-We can, upon request, create packages with binaries of the OpenMalaria simulator and a few examples for win32/OS X/linux 32/64-bit platforms. Mac users are invited to follow the build instructions for their OS. Please ask if none of the links above provide what you need.
+We can, upon request, create packages with binaries of the *openmalaria* simulator and a few examples for win32/OS X/linux 32/64-bit platforms. Mac users are invited to follow the build instructions for their OS. Please ask us for more information if none of the links above provide what you need.
 
 == Troubleshooting ==
 
@@ -21,7 +21,6 @@ Still have problems? We want to know! Send us an e-mail, or, better yet open an 
 = Experiment creator =
 
 The experiment creator tool is designed to produce a full set of XML files for an experiment from a set of sweeps (factors) each with one or more arms (values). [ExperimentDesign more ... ]
-
 
 
 = Schema translator =
